--- a/LM-TrashcanData.ipynb
+++ b/LM-TrashcanData.ipynb
@@ -5,7 +5,7 @@
    "id": "ad5f4ee4-eb6b-4845-889d-4e93bdcdf2b0",
    "metadata": {},
    "source": [
-    "## Analysis of Waste Recovery Locations\n",
+    "## Analysis of 'Smart' Trashcan Locations\n",
     "by Leo Morse\n",
     "\n",
     "link to dataset: https://data.wprdc.org/datastore/dump/75b83ac9-8069-4cf1-bcc3-b9e6b04487d9\r\n"
