finished air pollution analysis

--- a/AirPollution.ipynb
+++ b/AirPollution.ipynb
@@ -310,9 +310,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0582ecb-b185-4d88-a9b0-06be51392041",
+   "metadata": {},
+   "source": [
+    "I'd love to make a fancy map plot of this data but I have literally zero idea how to do that."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60571910-a9a3-4792-9471-99a638c7a311",
+   "id": "ee1cc05e-836d-4001-8c32-684de2716790",
    "metadata": {},
    "outputs": [],
    "source": []
