add air pollution geopandas yayyy

--- a/AirPollution.ipynb
+++ b/AirPollution.ipynb
@@ -323,7 +323,29 @@
    "id": "ee1cc05e-836d-4001-8c32-684de2716790",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "neighborhoods = geopandas.read_file(\"Neighborhoods/Neighborhoods_.shp\")\n",
+    "trash_map = neighborhoods.merge(num_cans, how='left', left_on='hood', right_on='neighborhood')\n",
+    "trash_map = trash_map[['hood','_id','geometry']]\n",
+    "fig, ax = plt.subplots(1, 1)\n",
+    "divider = make_axes_locatable(ax)\n",
+    "cax = divider.append_axes(\"bottom\", size=\"5%\", pad=0.1)\n",
+    "ax.set_axis_off()\n",
+    "trash_map.plot(column='_id',\n",
+    "              legend=True,\n",
+    "              legend_kwds={'label': \"Trash Cans per Neighberhood\", 'orientation': 'horizontal'},\n",
+    "              figsize=(15, 10),\n",
+    "              edgecolor=\"white\",\n",
+    "               cmap='YlGnBu',\n",
+    "               missing_kwds={\n",
+    "                   \"color\": \"lightgrey\",\n",
+    "                   \"edgecolor\": \"grey\",\n",
+    "                   \"hatch\": \"///\",\n",
+    "                   \"label\": \"Missing values\"},\n",
+    "               ax=ax,\n",
+    "               cax=cax\n",
+    "              )"
+   ]
   }
  ],
  "metadata": {
